@@ -4,6 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="name"/>
     <field name="name"/>
+    <label name="active"/>
+    <field name="active"/>
     <notebook>
         <page string="Members" col="2" id="members">
             <field name="users" colspan="2"/>
