@@ -1,3 +1,4 @@
+* Add active field on ModelAccess, ModelFieldAccess and Group
 * Use write mode by default to check create and delete of resources
 
 Version 5.0.0 - 2018-10-01
